[tool.poetry]
name = "quart-chat"
version = "0.1.0"
description = "Quart chat app"
authors = ["Cristobal Bergillos <cristobalbergillosnavarro@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "quart_chat", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Quart = "^0.19.4"

[tool.poetry.scripts]
start = "quart_chat:run"
hola = "quart_chat:hello"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


